# MiEngine2

./: .gitignore  CLAUDE.md  CMakeLists.txt  DENOISER_FIX_PROGRESS.md  IBL_Analysis_Request.txt  IBL_Critical_Fixes_Applied.txt  IBL_Prefiltered_Map_Analysis_Report.txt  LICENSE  MILESTONES.md  MILESTONE_5_ACTOR_SCENE_SYSTEM.md  MILESTONE_6_ACTOR_SPAWNING_UI.md  MILESTONE_6_RAY_TRACING.md  MiEngine2.sln  MiEngine2.vcxproj  MiEngine2.vcxproj.filters  Ruiqi_Wang_Resume.md  VulkanRenderer.cpp  VulkanRenderer.h
docs/: ActorSystemGuide.md  VirtualGeoClusteringSystem.md
docs/milestones/: M1_PHYSICS.md  M2_ANIMATION.md  M3_PROJECT.md  M4_ASSET.md  M5_ACTOR.md  M6_RAYTRACING.md  M7_VIRTUALGEO.md
include/Renderer/: IBLSystem.h  PointLightShadowSystem.h  ShadowSystem.h  WaterSystem.h
include/Utils/: CommonVertex.h  Picking.h  SkeletalVertex.h  TextureUtils.h
include/actor/: MiEmptyActor.h  MiStaticMeshActor.h
include/animation/: AnimationClip.h  SkeletalMeshComponent.h  Skeleton.h
include/asset/: AssetBrowserWindow.h  AssetImporter.h  AssetRegistry.h  AssetTypes.h  MeshCache.h  MeshLibrary.h
include/camera/: Camera.h
include/component/: MiStaticMeshComponent.h
include/core/: Application.h  Game.h  Input.h  JsonIO.h  MiActor.h  MiComponent.h  MiCore.h  MiDelegate.h  MiObject.h  MiSceneComponent.h  MiTransform.h  MiTypeRegistry.h  MiWorld.h
include/culling/: FrustumCulling.h
include/debug/: ActorSpawnerPanel.h  CameraDebugPanel.h  DebugPanel.h  DebugUIManager.h  MaterialDebugPanel.h  PerformancePanel.h  RayTracingDebugPanel.h  RenderDebugPanel.h  SceneHierarchyPanel.h  ScenePanel.h  SettingsPanel.h  VirtualGeoDebugPanel.h  WaterDebugPanel.h
include/loader/: ModelLoader.h
include/material/: Material.cpp  Material.h
include/mesh/: Mesh.h  SkeletalMesh.h
include/physics/: ColliderComponent.h  Component.h  PhysicsWorld.h  RigidBodyComponent.h
include/project/: Project.h  ProjectLauncher.h  ProjectManager.h  ProjectSerializer.h
include/raytracing/: RayTracingSystem.h  RayTracingTypes.h
include/scene/: Scene.h  SceneSerializer.h
include/texture/: Texture.h
include/virtualgeo/: ClusterDAGBuilder.h  ClusteredMeshCache.h  GraphPartitioner.h  MeshClusterer.h  VirtualGeoRenderer.h  VirtualGeoTypes.h
models/: Robot2.fbx  anim.fbx
shaders/: ComputeShader.frag  VertexShader.vert  compile_shaders.bat  fullscreen.vert  pbr.frag  pbr.vert  shadow.frag  shadow.vert  shadow_point.frag  shadow_point.vert  shadow_skeletal.vert  skeletal.vert  skybox.frag  skybox.vert  tonemapping.frag  water.frag  water.vert  water_normals.comp  water_simulation.comp
shaders/culling/: frustum_cull.comp
shaders/raytracing/: closesthit.rchit  denoise_spatial.comp  denoise_temporal.comp  miss.rmiss  miss_shadow.rmiss  raygen.rgen  rt_common.glsl
shaders/virtualgeo/: cluster.frag  cluster.vert  cluster_cull.comp  hiz_copy.frag  hiz_copy.vert  hiz_debug.frag  hiz_debug.vert  hiz_generate.comp
src/: SandboxGame.h  main.cpp
src/Renderer/: IBLSystem.cpp  PointLightShadowSystem.cpp  ShadowSystem.cpp  WaterSystem.cpp
src/Utils/: TextureUtils.cpp
src/actor/: MiEmptyActor.cpp  MiStaticMeshActor.cpp
src/animation/: AnimationClip.cpp  SkeletalMeshComponent.cpp  Skeleton.cpp
src/asset/: AssetBrowserWindow.cpp  AssetImporter.cpp  AssetRegistry.cpp  MeshCache.cpp  MeshLibrary.cpp
src/camera/: Camera.cpp
src/component/: MiStaticMeshComponent.cpp
src/core/: Input.cpp  JsonIO.cpp  MiActor.cpp  MiComponent.cpp  MiObject.cpp  MiSceneComponent.cpp  MiTransform.cpp  MiTypeRegistry.cpp  MiWorld.cpp
src/culling/: FrustumCulling.cpp
src/debug/: ActorSpawnerPanel.cpp  CameraDebugPanel.cpp  DebugPanel.cpp  (+10 more)
(+32 files in other folders)
